test/ui/src/compile_fail/std/emit_props_non_optional.rs
fn main() {
    let x = Some("some data");

    emit::emit!("template {x}");
}
